feat: Hide scrollbars from horizontal category carousel
Adds a CSS class to hide the scrollbar for the horizontal category carousel on mobile devices, improving the user experience by removing visual clutter.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   }
 }
 </script>
+<style>
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+</style>
 </head>
   <body>
     <div id="root"></div>
