feat: Add comprehensive SEO meta tags and structured data
Implement SEO best practices by adding meta tags for description, keywords, author, robots, and canonical URLs. This also includes Open Graph and Twitter card meta tags for social sharing.

Additionally, introduce a `SEO` component for managing dynamic meta tags and structured data (JSON-LD) for improved search engine visibility and rich results. This component is now applied to the homepage, wishlist, and product pages.

The favicon has also been updated to use an inline SVG.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg width='1778' height='1517' viewBox='0 0 1778 1517' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M892.543 49.4434L43.7256 1491.44H160.918L892.543 248.101L1617.97 1491.91H1734.21L892.543 49.4434Z' fill='%232563EB' stroke='%232563EB' stroke-width='50'/><path d='M1154.14 933.996H1040.67L886.712 700.369L672.057 1072.16H1222.88L1464.96 1491.44H313.726L438.351 1298.66H554.905L489.4 1389.04H1289.37L1159.14 1163.49H500.834L886.712 495.131L1154.14 933.996Z' fill='white' stroke='white' stroke-width='50'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobixo - Modern Ecommerce Store</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Shop the latest electronics, gadgets, and accessories at Mobixo. Discover amazing deals on smart TVs, cameras, drones, and more. Free shipping and 24/7 support.">
+    <meta name="keywords" content="ecommerce, electronics, gadgets, react, mobixo, smart tv, camera, drone, headphones">
+    <meta name="author" content="Mobixo">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://mobixo.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mobixo.com/">
+    <meta property="og:title" content="Mobixo - Modern Ecommerce Store">
+    <meta property="og:description" content="Shop the latest electronics, gadgets, and accessories at Mobixo.">
+    <meta property="og:image" content="https://res.cloudinary.com/dzx5zkl7v/image/upload/v1761378383/Hero_image_tyy9x9.jpg">
+    <meta property="og:site_name" content="Mobixo">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://mobixo.com/">
+    <meta name="twitter:title" content="Mobixo - Modern Ecommerce Store">
+    <meta name="twitter:description" content="Shop the latest electronics, gadgets, and accessories at Mobixo.">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dzx5zkl7v/image/upload/v1761378383/Hero_image_tyy9x9.jpg">
+
+    <!-- Default Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Mobixo",
+      "url": "https://mobixo.com/",
+      "logo": "data:image/svg+xml,%3Csvg width='1778' height='1517' viewBox='0 0 1778 1517' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M892.543 49.4434L43.7256 1491.44H160.918L892.543 248.101L1617.97 1491.91H1734.21L892.543 49.4434Z' fill='%232563EB' stroke='%232563EB' stroke-width='50'/%3E%3Cpath d='M1154.14 933.996H1040.67L886.712 700.369L672.057 1072.16H1222.88L1464.96 1491.44H313.726L438.351 1298.66H554.905L489.4 1389.04H1289.37L1159.14 1163.49H500.834L886.712 495.131L1154.14 933.996Z' fill='white' stroke='white' stroke-width='50'/%3E%3C/svg%3E",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+01-234-567-89",
+        "contactType": "customer service"
+      }
+    }
+    </script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
