--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg width='1778' height='1517' viewBox='0 0 1778 1517' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M892.543 49.4434L43.7256 1491.44H160.918L892.543 248.101L1617.97 1491.91H1734.21L892.543 49.4434Z' fill='%232563EB' stroke='%232563EB' stroke-width='50'/><path d='M1154.14 933.996H1040.67L886.712 700.369L672.057 1072.16H1222.88L1464.96 1491.44H313.726L438.351 1298.66H554.905L489.4 1389.04H1289.37L1159.14 1163.49H500.834L886.712 495.131L1154.14 933.996Z' fill='white' stroke='white' stroke-width='50'/></svg>" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg width='1778' height='1517' viewBox='0 0 1778 1517' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M892.543 49.4434L43.7256 1491.44H160.918L892.543 248.101L1617.97 1491.91H1734.21L892.543 49.4434Z' fill='%232563EB' stroke='%232563EB' stroke-width='50'/><path d='M1154.14 933.996H1040.67L886.712 700.369L672.057 1072.16H1222.88L1464.96 1491.44H313.726L438.351 1298.66H554.905L489.4 1389.04H1289.37L1159.14 1163.49H500.834L886.712 495.131L1154.14 933.996Z' fill='%23262A30' stroke='%23262A30' stroke-width='50'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobixo - Modern Ecommerce Store</title>
 
@@ -35,7 +35,7 @@
       "@type": "Organization",
       "name": "Mobixo",
       "url": "https://mobixo.com/",
-      "logo": "data:image/svg+xml,%3Csvg width='1778' height='1517' viewBox='0 0 1778 1517' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M892.543 49.4434L43.7256 1491.44H160.918L892.543 248.101L1617.97 1491.91H1734.21L892.543 49.4434Z' fill='%232563EB' stroke='%232563EB' stroke-width='50'/%3E%3Cpath d='M1154.14 933.996H1040.67L886.712 700.369L672.057 1072.16H1222.88L1464.96 1491.44H313.726L438.351 1298.66H554.905L489.4 1389.04H1289.37L1159.14 1163.49H500.834L886.712 495.131L1154.14 933.996Z' fill='white' stroke='white' stroke-width='50'/%3E%3C/svg%3E",
+      "logo": "data:image/svg+xml,%3Csvg width='1778' height='1517' viewBox='0 0 1778 1517' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M892.543 49.4434L43.7256 1491.44H160.918L892.543 248.101L1617.97 1491.91H1734.21L892.543 49.4434Z' fill='%232563EB' stroke='%232563EB' stroke-width='50'/%3E%3Cpath d='M1154.14 933.996H1040.67L886.712 700.369L672.057 1072.16H1222.88L1464.96 1491.44H313.726L438.351 1298.66H554.905L489.4 1389.04H1289.37L1159.14 1163.49H500.834L886.712 495.131L1154.14 933.996Z' fill='%23262A30' stroke='%23262A30' stroke-width='50'/%3E%3C/svg%3E",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+01-234-567-89",
