feat: Add Orbitron font for enhanced branding
Integrates the Orbitron Google Font into the application's index.html and applies it to the logo in the Header component. This change aims to improve the visual identity and branding of Mobixo with a futuristic font.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobixo - Modern Ecommerce Store</title>
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
+
     <!-- SEO Meta Tags -->
     <meta name="description" content="Shop the latest electronics, gadgets, and accessories at Mobixo. Discover amazing deals on smart TVs, cameras, drones, and more. Free shipping and 24/7 support.">
     <meta name="keywords" content="ecommerce, electronics, gadgets, react, mobixo, smart tv, camera, drone, headphones">
@@ -62,6 +67,9 @@
   .no-scrollbar {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+  }
+  .font-orbitron {
+    font-family: 'Orbitron', sans-serif;
   }
 </style>
 </head>
