--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.25.1"
+    "react/": "https://esm.sh/react@19.2.0/",
+    "react": "https://esm.sh/react@19.2.0",
+    "react-dom/": "https://esm.sh/react-dom@19.2.0/",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.25.1"
   }
 }
 </script>
